--- a/style.css
+++ b/style.css
@@ -156,6 +156,30 @@ input[type=submit]{
 
 /* ----------form container------------- */
 
+.form-container-contact{
+    background: var(--orange);
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    padding: .5rem;
+    /* position: relative; */
+}
+
+.form-container-contact > form {
+    width: 600px;
+    height: fit-content;
+    background-color: white;
+    padding: 1.5rem;
+    border-radius: 10px;
+}
+
+.form-container-contact > form > button {
+    background: #000;
+    color: var(--orange);
+    font-size: 1rem;
+}
+
 .form-container{
     background: var(--orange);
     width: 100%;
@@ -1274,6 +1298,238 @@ footer .bottom-footer{
     cursor: pointer;
 }
 
+
+.address {
+    width: 100%;
+    background: #f5f5f5;
+}
+.address .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+}
+
+.address .row .box{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 2rem 0;
+}
+
+
+/* ---------------View page------------- */
+
+.view_page{
+    padding: 5% 8%;
+}
+
+.view_page form{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(15rem,1fr));
+    justify-content: center;
+    align-items: center;
+}
+
+.view_page form img {
+    width: 100%;
+    height: 100%;
+    padding: .5rem;
+    border-radius: 50%;
+    background: var(--orange);
+}
+
+.view_page form .name{
+    font-size: 3rem;
+    margin-bottom: -1rem;
+    text-transform: capitalize;
+    color: var(--orange);
+}
+
+.view_page form .detail,
+.view_page form .price{
+    font-size: 18px;
+    color: grey;
+    line-height: 2;
+}
+
+
+.view_page form .price{
+    position: relative;
+    left:0;
+}
+
+
+
+.view_page form .icon{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0.5rem;
+    border: 2 px solid orange;
+    border-radius: 3px;
+    margin-top: 1rem;
+}
+
+.view_page form .icon button{
+    background: transparent;
+    outline: none;
+    color: black;
+    margin: 0.5rem;
+    width: 50px;
+    height: 50px;
+    padding: .1rem 0.5rem;
+    cursor: pointer;
+}
+
+
+/* ---------------Wishlist------------- */
+
+.disabled{
+    pointer-events: none;
+    opacity: .5;
+}
+
+.wishlist_total{
+    width: 1200px;
+    box-shadow: var(--box-shadow);
+    margin: 2rem auto;
+    border: 1px solid gainsboro;
+    text-align: center;
+    padding: 3rem 0;
+    line-height: 2;
+    text-transform: capitalize;
+    margin-bottom: 3rem;
+
+}
+
+.wishlist_total p{
+    font-size: 1.5rem;
+}
+
+.wishlist_total a{
+    text-transform: capitalize;
+    font-size: 16px;
+    margin-left: 2rem;
+}
+
+.qty{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.qty input[type="number"]{
+    width: 35%;
+}
+.qty input[type="submit"]{
+    width: 55%;
+    cursor: pointer;
+    background:var(--orange);
+    box-shadow: none;
+    color: #fff; 
+}
+
+.dlt{
+    text-align: center;
+    text-transform: capitalize;
+    background-color: #000;
+    color: var(--orange);
+    width: 50%;
+    margin: auto;
+    padding: .5rem 0;
+    border-radius: 5px;
+}
+
+.dlt a{
+    color: var(--orange);
+
+}
+
+.wishlist_total .btn{
+    background: var(--orange);
+    color: #fff;
+    margin: 1rem;
+}
+
+
+/* ---------------checkout page------------- */
+
+.display-order{
+    display: grid;
+    place-items: center;
+    /* box-shadow: 10px 10px 10px grey; */
+    width: 100%;
+  
+    text-align: center;
+   
+    line-height: 2;
+}
+
+.display-order .box-container{
+    /* width: 400px; */
+    height: fit-content;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    /* grid-template-columns: repeat(auto-fit,minmax(15rem,1fr)); */
+}
+
+.display-order .box{
+
+display: flex;
+flex-direction: column;
+box-shadow: 0px 0px 10px grey;
+/* border: 1px solid black; */
+padding: 10px;
+width: 169px;
+height: 200px;
+
+align-items: center;
+}
+
+.display-order .box img {
+  width: 100px;
+  height: 100px;
+    border-radius: 50%;
+}
+
+.display-order span{
+    display: inline-block;
+    background:#f5f5f5;
+    padding: .4rem;
+    border-radius: 3px;
+    text-transform: capitalize;
+
+}
+
+.display-order .grand-total{
+    width: 90%;
+    background: var(--orange);
+    color: #fff;
+    cursor: pointer;
+}
+
+.checkout-form{
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.checkout-form form{
+    width: 400px;
+    box-shadow: 0px 0px 10px grey;
+    border-radius:10px;
+    padding: 2rem;
+    margin: 2rem 0;
+}
+
+.input-field label{
+    margin: .6rem 0;
+    text-transform: uppercase;
+}
 
 
 /* ---------------media screen------------- */
